Time series visualization without previous compute. Improved error handling and user interaction. Fixed a bug in the hinton visualization (wrong cell highlights). Save document request on exit. Fixed a bug (due to floating point precision) in the time series averager. Disabled input pane in startup wizard to avoid changes to the parameters while parsing. Started working on time lag visualization.

--- a/src/Gui/fxml/MainWindow.fxml
+++ b/src/Gui/fxml/MainWindow.fxml
@@ -16,7 +16,7 @@
     </Menu>
     <Menu mnemonicParsing="false" text="Help">
       <MenuItem mnemonicParsing="false" onAction="#showGitHubWiki" text="Wiki Pages" />
-      <MenuItem mnemonicParsing="false" onAction="#showGitHubIssues" text="Report a bug (GitHub account required)" />
+      <MenuItem mnemonicParsing="false" onAction="#showGitHubRepository" text="Source Code on GitHub" />
     </Menu>
   </MenuBar>
   <SplitPane dividerPositions="0.33827493261455527" focusTraversable="false" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" VBox.vgrow="ALWAYS">
