--- a/src/Gui/fxml/ComputationTab.fxml
+++ b/src/Gui/fxml/ComputationTab.fxml
@@ -5,8 +5,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <?import java.net.URL?>
-<HBox fx:id="computationInputPane" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Gui.ComputationController">
-  <SplitPane dividerPositions="0.5440783615316117" focusTraversable="true" prefHeight="-1.0" prefWidth="1125.0" HBox.hgrow="ALWAYS">
+<HBox fx:id="computationInputPane" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="1257.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Gui.ComputationController">
+  <SplitPane dividerPositions="0.43824701195219123" focusTraversable="true" prefHeight="-1.0" prefWidth="1125.0" HBox.hgrow="ALWAYS">
     <items>
       <GridPane fx:id="inputGridPane" gridLinesVisible="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="221.0" prefWidth="590.0">
         <GridPane prefHeight="-1.0" prefWidth="-1.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
@@ -23,30 +23,24 @@
           <TextField fx:id="windowSizeText" alignment="TOP_RIGHT" prefWidth="-1.0" text="200" GridPane.columnIndex="1" GridPane.rowIndex="0" />
           <Label prefWidth="-1.0" text="Window overlap" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
           <TextField fx:id="baseWindowOffsetText" alignment="TOP_RIGHT" minHeight="-1.0" prefHeight="-1.0" prefWidth="-1.0" text="130" visible="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-          <Label contentDisplay="RIGHT" text="Time lag min" visible="true" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+          <Label contentDisplay="RIGHT" text="Time lag max" visible="true" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
             <tooltip>
-              <Tooltip text="Defines the lower limit of the time lag range to compute in each window." />
+              <Tooltip text="The maximum relative offset of a time window to search for similar patterns. The value is automatically adopted to be divisible by time lag step to avoid asymmetries in the computation result." />
             </tooltip>
           </Label>
-          <TextField fx:id="timeLagMinText" alignment="TOP_RIGHT" prefWidth="-1.0" text="-100" visible="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-          <Label contentDisplay="RIGHT" text="Time lag max" visible="true" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
-            <tooltip>
-              <Tooltip text="Defines the upper limit of the time lag range to compute in each window." />
-            </tooltip>
-          </Label>
-          <TextField fx:id="timeLagMaxText" alignment="TOP_RIGHT" prefWidth="-1.0" text="100" visible="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-          <Label contentDisplay="RIGHT" text="Time lag step" visible="true" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+          <TextField fx:id="timeLagMaxText" alignment="TOP_RIGHT" prefWidth="-1.0" text="100" visible="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+          <Label contentDisplay="RIGHT" text="Time lag step" visible="true" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
             <tooltip>
               <Tooltip text="Defines the upper limit of the time lag range to compute in each window." />
             </tooltip>
           </Label>
-          <TextField id="timeLagMaxText" fx:id="timeLagStepText" alignment="TOP_RIGHT" prefWidth="-1.0" text="1" visible="true" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-          <Label contentDisplay="RIGHT" text="p value" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
+          <TextField id="timeLagMaxText" fx:id="timeLagStepText" alignment="TOP_RIGHT" prefWidth="-1.0" text="1" visible="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+          <Label contentDisplay="RIGHT" text="p value" wrapText="true" GridPane.columnIndex="0" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
             <tooltip>
               <Tooltip text="The level of significance when testing on significant correlation values (usually 0.05 = 5% or 0.01 = 1%)." />
             </tooltip>
           </Label>
-          <TextField id="significanceLevel" fx:id="significanceLevelText" alignment="TOP_RIGHT" prefWidth="-1.0" text="0.05" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+          <TextField id="significanceLevel" fx:id="significanceLevelText" alignment="TOP_RIGHT" prefWidth="-1.0" text="0.05" GridPane.columnIndex="1" GridPane.rowIndex="4" />
           <Label contentDisplay="RIGHT" text="data points" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="0">
             <tooltip>
               <Tooltip text="Defines the size of the windows in which the time series are shifted and cross correlated." />
@@ -56,7 +50,6 @@
             </GridPane.margin>
           </Label>
           <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -74,11 +67,6 @@
             </tooltip>
           </Label>
           <Label contentDisplay="RIGHT" text="data points" wrapText="true" GridPane.columnIndex="2" GridPane.margin="$x1" GridPane.rowIndex="3">
-            <tooltip>
-              <Tooltip text="Defines the size of the windows in which the time series are shifted and cross correlated." />
-            </tooltip>
-          </Label>
-          <Label contentDisplay="RIGHT" text="data points" wrapText="true" GridPane.columnIndex="2" GridPane.margin="$x1" GridPane.rowIndex="4">
             <tooltip>
               <Tooltip text="Defines the size of the windows in which the time series are shifted and cross correlated." />
             </tooltip>
@@ -139,7 +127,7 @@
           <RowConstraints fillHeight="true" maxHeight="-1.0" minHeight="-1.0" prefHeight="-1.0" vgrow="NEVER" />
         </rowConstraints>
       </GridPane>
-      <VBox id="VBox" alignment="CENTER" prefWidth="568.0" spacing="5.0">
+      <VBox id="VBox" alignment="CENTER" prefWidth="574.9999000000025" spacing="5.0">
         <children>
           <TableView id="correlogramTable" fx:id="correlogramCacheTable" disable="false" editable="false" minWidth="0.0" prefHeight="200.0" prefWidth="549.0" style="-fx-focus-color: transparent;" tableMenuButtonVisible="false" VBox.vgrow="ALWAYS">
             <columns>
@@ -147,10 +135,11 @@
               <TableColumn editable="false" maxWidth="5000.0" minWidth="10.0" prefWidth="109.0" style="-fx-font-size: 11; -fx-text-fill: #0066ff;" text="size of input set 2" fx:id="input2SeriesColumn" />
               <TableColumn editable="false" maxWidth="5000.0" minWidth="10.0" prefWidth="94.0" style="-fx-font-size: 11px;" text="window size" fx:id="windowSizeColumn" />
               <TableColumn editable="false" maxWidth="5000.0" minWidth="10.0" prefWidth="60.0" style="-fx-font-size: 10px;" text="overlap" fx:id="overlapColumn" />
-              <TableColumn editable="false" maxWidth="5000.0" minWidth="10.0" prefWidth="79.0" style="-fx-font-size: 11px;" text="lag range" fx:id="lagRangeColumn" />
-              <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="64.0" style="-fx-font-size: 11px&#10;" text="lag step" fx:id="lagStepColumn" />
+              <TableColumn editable="false" maxWidth="5000.0" minWidth="10.0" prefWidth="79.0" sortable="false" style="-fx-font-size: 11px;" text="lag range" fx:id="lagRangeColumn" />
+              <TableColumn editable="false" maxWidth="5000.0" minWidth="10.0" prefWidth="64.0" style="-fx-font-size: 11px&#10;" text="lag step" fx:id="lagStepColumn" />
               <TableColumn editable="false" maxWidth="5000.0" minWidth="10.0" prefWidth="52.0" style="-fx-font-size: 11;" text="p" fx:id="significanceColumn" />
-              <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="75.0" style="-fx-font-size: 10;" text="time (h:m:s)" visible="false" fx:id="timeColumn" />
+              <TableColumn editable="false" maxWidth="5000.0" minWidth="10.0" prefWidth="75.0" style="-fx-font-size: 10;" text="time (h:m:s)" visible="false" fx:id="timeColumn" />
+              <TableColumn editable="false" maxWidth="5000.0" minWidth="10.0" prefWidth="157.0" sortable="false" style="-fx-font-size: 10;" text="approx. memory consumption" fx:id="approximateMemoryColumn" />
             </columns>
           </TableView>
           <Label contentDisplay="RIGHT" text="List of all computed results." textFill="BLACK" wrapText="true" />
