Added optional axis hinting to the canvas chart that draws a tick mark at the current mouse position. Quick fix: Axis labels can be changed using a menu entry. Fixed a bug that crashed the JVM, caused by Platform.runLater(...show alert...).

--- a/src/Gui/fxml/MainWindow.fxml
+++ b/src/Gui/fxml/MainWindow.fxml
@@ -14,6 +14,11 @@
       <SeparatorMenuItem mnemonicParsing="false" />
       <MenuItem mnemonicParsing="false" onAction="#quit" text="Quit" />
     </Menu>
+    <Menu mnemonicParsing="false" text="Settings">
+      <items>
+        <MenuItem mnemonicParsing="false" onAction="#changeAxisLabels" text="Axis Labels" />
+      </items>
+    </Menu>
     <Menu mnemonicParsing="false" text="Help">
       <MenuItem mnemonicParsing="false" onAction="#showGitHubWiki" text="Wiki Pages" />
       <MenuItem mnemonicParsing="false" onAction="#showGitHubRepository" text="Source Code on GitHub" />
