--- a/src/Gui/fxml/MainWindow.fxml
+++ b/src/Gui/fxml/MainWindow.fxml
@@ -3,6 +3,8 @@
 <?language javascript?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <VBox fx:id="mainWindowRoot" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="600.0" minWidth="800.0" prefHeight="768.0" prefWidth="1024.0" spacing="0.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Gui.MainWindowController">
   <MenuBar useSystemMenuBar="true">
@@ -29,11 +31,22 @@
       <TabPane fx:id="inputTabPane" minHeight="0.0" prefHeight="165.0" prefWidth="200.0" rotateGraphic="false" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="26.0" tabMinHeight="0.0">
         <Tab closable="false" text="Parameters">
           <fx:include fx:id="computation" source="ComputationTab.fxml" alignment="TOP_LEFT" />
+          <graphic>
+            <Button maxHeight="10.0" maxWidth="10.0" minHeight="10.0" minWidth="10.0" mnemonicParsing="false" prefHeight="10.0" prefWidth="10.0" text="">
+              <graphic>
+                <ImageView fitHeight="10.0" fitWidth="10.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true" rotate="315.0">
+                  <image>
+                    <Image url="@../img/glyphicons_211_right_arrow.png" />
+                  </image>
+                </ImageView>
+              </graphic>
+            </Button>
+          </graphic>
         </Tab>
         <Tab closable="false" text="Cell Distribution">
           <fx:include fx:id="cellDistributionView" source="CellDistributionView.fxml" prefHeight="147.0" prefWidth="988.0" />
         </Tab>
-        <Tab closable="true" text="Time Series">
+        <Tab closable="true" disable="false" text="Time Series">
           <fx:include fx:id="timeSeriesView" source="TimeSeriesView.fxml" />
         </Tab>
         <Tab style="" text="Matrix Filter">
