--- a/src/Gui/fxml/Correlogram.fxml
+++ b/src/Gui/fxml/Correlogram.fxml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.text.Text?>
+
 <AnchorPane fx:id="correlogramRoot" disable="false" layoutX="0.0" layoutY="0.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: white;" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Gui.CorrelogramController">
   <VBox id="VBox" alignment="CENTER" disable="false" maxWidth="20.0" minWidth="20.0" prefWidth="20.0" spacing="5.0" style="-fx-background-color: gainsboro;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
     <Text fontSmoothingType="GRAY" rotate="270.0" smooth="true" strikethrough="false" strokeType="OUTSIDE" strokeWidth="0.0" text="Correlation View" translateX="0.0" translateY="45.0" VBox.vgrow="NEVER">
@@ -94,5 +98,6 @@
       <Tab closable="false" text="" />
       <Tab closable="false" text="" />
     </TabPane>
+    <SplitPane fx:id="correlogramLegendSplit" dividerPositions="" focusTraversable="true" orientation="VERTICAL" prefHeight="160.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
   </VBox>
 </AnchorPane>
