--- a/src/Gui/fxml/StartUpWizard.fxml
+++ b/src/Gui/fxml/StartUpWizard.fxml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.text.Font?>
+
 <BorderPane id="BorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="434.0" prefWidth="1021.0" rotate="0.0" snapToPixel="true" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="Gui.StartUpWizardController">
   <center>
     <GridPane fx:id="inputPane" disable="false" gridLinesVisible="false" hgap="3.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="338.0" prefWidth="661.0" vgap="0.0">
@@ -113,7 +119,7 @@
       <Label layoutY="68.0" text="Patrick Köthur" AnchorPane.leftAnchor="10.0" />
       <Label layoutY="87.0" text="carl.witt@gfz-potsdam.de" AnchorPane.leftAnchor="176.0" />
       <Label layoutY="68.0" text="patrick.koethur@gfz-potsdam.de" AnchorPane.leftAnchor="130.0" />
-      <Label layoutX="10.0" layoutY="37.0" prefWidth="284.0" text="Prototype (build 2014-11-19)" />
+      <Label layoutX="10.0" layoutY="37.0" prefWidth="284.0" text="Prototype (build 2015-05-14)" />
     </AnchorPane>
   </top>
 </BorderPane>
